--- a/bin/fxml/MainView.fxml
+++ b/bin/fxml/MainView.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXTextArea?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
@@ -12,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="borderPane" maxHeight="400.0" maxWidth="600.0" minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainViewController">
+<BorderPane fx:id="borderPane" maxHeight="400.0" maxWidth="600.0" minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #009688;" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainViewController">
    <top>
       <GridPane prefHeight="50.0" prefWidth="300.0" BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -28,17 +27,17 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <JFXButton fx:id="pomodoro" prefHeight="30.0" text="Pomodoro" GridPane.columnIndex="1">
+            <JFXButton fx:id="pomodoro" buttonType="RAISED" opacity="0.83" prefHeight="30.0" style="-fx-background-color: #00796b;" text="Pomodoro" textFill="WHITE" GridPane.columnIndex="1">
                <GridPane.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </GridPane.margin>
             </JFXButton>
-            <JFXButton fx:id="shortBreak" prefHeight="30.0" text="Short Break" GridPane.columnIndex="3">
+            <JFXButton fx:id="shortBreak" buttonType="RAISED" opacity="0.83" prefHeight="30.0" style="-fx-background-color: #00796b;" text="Short Break" textFill="WHITE" GridPane.columnIndex="3">
                <GridPane.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </GridPane.margin>
             </JFXButton>
-            <JFXButton fx:id="longBreak" prefHeight="30.0" text="Long Break" GridPane.columnIndex="5">
+            <JFXButton fx:id="longBreak" buttonType="RAISED" opacity="0.83" prefHeight="30.0" style="-fx-background-color: #00796b;" text="Long Break" textFill="WHITE" GridPane.columnIndex="5">
                <GridPane.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </GridPane.margin>
@@ -51,7 +50,6 @@
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
          </columnConstraints>
          <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -61,12 +59,12 @@
          <children>
             <VBox GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <Label fx:id="timer" prefHeight="100.0" prefWidth="200.0" text="09:05">
+                  <Label fx:id="timer" prefHeight="100.0" prefWidth="200.0" text="09:05" textFill="WHITE">
                      <padding>
                         <Insets left="30.0" />
                      </padding>
                      <VBox.margin>
-                        <Insets left="65.0" />
+                        <Insets left="75.0" />
                      </VBox.margin>
                      <font>
                         <Font size="48.0" />
@@ -74,34 +72,52 @@
                   </Label>
                   <HBox prefHeight="50.0" prefWidth="330.0" spacing="10.0">
                      <children>
-                        <JFXButton fx:id="start" prefHeight="50.0" prefWidth="100.0" text="Start">
+                        <JFXButton fx:id="start" buttonType="RAISED" opacity="0.83" prefHeight="40.0" prefWidth="100.0" style="-fx-background-color: #00796b;" text="Start" textFill="WHITE">
                            <HBox.margin>
                               <Insets left="5.0" />
                            </HBox.margin>
                         </JFXButton>
-                        <JFXButton fx:id="stop" prefHeight="50.0" prefWidth="100.0" text="Stop">
+                        <JFXButton fx:id="stop" buttonType="RAISED" opacity="0.83" prefHeight="40.0" prefWidth="100.0" style="-fx-background-color: #00796b;" text="Stop" textFill="WHITE">
                            <HBox.margin>
                               <Insets left="5.0" />
                            </HBox.margin>
                         </JFXButton>
-                        <JFXButton fx:id="reset" prefHeight="50.0" prefWidth="100.0" text="Reset">
+                        <JFXButton fx:id="reset" buttonType="RAISED" opacity="0.83" prefHeight="40.0" prefWidth="100.0" style="-fx-background-color: #00796b;" text="Reset" textFill="WHITE">
                            <HBox.margin>
                               <Insets left="5.0" />
                            </HBox.margin>
                         </JFXButton>
                      </children>
                      <VBox.margin>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                        <Insets bottom="5.0" left="5.0" top="5.0" />
                      </VBox.margin>
                   </HBox>
-                  <HBox prefHeight="150.0" prefWidth="250.0">
+                  <HBox maxHeight="150.0" maxWidth="400.0" minHeight="150.0" minWidth="400.0" prefHeight="150.0" prefWidth="400.0">
                      <children>
-                        <JFXTextArea text="Keyboard Shortcuts&#10;&#10;* SPACE   Start or Stop the timer&#10;* ALT + P  Pomodoro&#10;* ALT + S  Short Break&#10;* ALT + L  Long Break&#10;* ALT + R  Reset Timer" />
+                        <Label fx:id="imageSlide" maxHeight="150.0" maxWidth="400.0" minHeight="150.0" minWidth="400.0" prefHeight="150.0" prefWidth="400.0" />
                      </children>
                   </HBox>
                </children>
             </VBox>
          </children>
+         <BorderPane.margin>
+            <Insets />
+         </BorderPane.margin>
       </GridPane>
    </center>
+   <right>
+      <GridPane BorderPane.alignment="CENTER">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label fx:id="volume" prefHeight="50.0" prefWidth="50.0" />
+         </children>
+      </GridPane>
+   </right>
 </BorderPane>
